--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
             <h1>TODO List</h1>
         </header>
         <div id="count-label"></div>
+        <button id="clear-complete-button">Clear completed</button>
         <section>
             <h2 id="todo-list-placeholder">Loading...</h2>
             <ul id="todo-list"></ul>
