--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
             <ul id="todo-list"></ul>
             <form id="todo-form">
                 <input id="new-todo" placeholder="What needs to be done?" autofocus>
-                <input id="submit-todo" type="submit" value="Create">
+                <input id="submit-todo" type="submit" value="Create" class="button">
             </form>
             <div id="error"></div>
         </section>
