--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,12 @@
                 <input id="new-todo" placeholder="What needs to be done?" autofocus>
                 <input id="submit-todo" type="submit" value="Create" class="button">
             </form>
+            <div id="todo-filters">
+                Show:
+                <button id="filter-all">All</button>
+                <button id="filter-active">Active</button>
+                <button id="filter-completed">Completed</button>
+            </div>
             <div id="error"></div>
         </section>
         <script type="text/javascript" src="main.js"></script>
