Include fetch in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
             </form>
             <div id="error"></div>
         </section>
+        <script type="text/javascript" src="https://rawgit.com/github/fetch/master/fetch.js"></script>
         <script type="text/javascript" src="main.js"></script>
     </body>
 </html>
